--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -103,6 +103,17 @@
   line-height: 1.5;
 }
 
+.inputBox {
+  margin-top: 20px;
+}
+.inputBox input {
+  float: right;
+}
+
+.agree {
+  margin-top: 20px;
+}
+
 .logo {
   height: 1em;
   margin-left: 0.5rem;
